[package]
name = "sqd-spray"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bs58 = "0.5.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
faster-hex = "0.10.0"
jsonrpsee = { version = "0.25.1", features = ["server", "tracing"] }
lexical-core = { version = "1.0.5", default-features = false, features = ["write", "write-integers", "write-floats"] }
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
serde_yaml = "0.9.33"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.0", features = ["tls-native-roots", "tls-ring", "zstd"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.13.1"